packages/slint_skia/lib/src/bindings.g.dart

// dart format off
// ignore_for_file: type=lint

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import, unused_element, deprecated_member_use_from_same_package
@ffi.DefaultAsset('package:slint_skia/src/bindings.g.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> slint_skia_last_error();

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void slint_skia_string_free(ffi.Pointer<ffi.Char> s);

@ffi.Native<SlintSkiaEngine Function()>()
external SlintSkiaEngine slint_skia_engine_new();

@ffi.Native<ffi.Void Function(SlintSkiaEngine)>()
external void slint_skia_engine_free(SlintSkiaEngine engine);

@ffi.Native<SlintSkiaDefinitionList Function(
  SlintSkiaEngine,
  ffi.Pointer<ffi.Char>,
  ffi.Pointer<ffi.Char>,
)>()
external SlintSkiaDefinitionList slint_skia_engine_compile(
  SlintSkiaEngine engine,
  ffi.Pointer<ffi.Char> source,
  ffi.Pointer<ffi.Char> path,
);

@ffi.Native<ffi.UintPtr Function(SlintSkiaDefinitionList)>()
external int slint_skia_definitions_count(SlintSkiaDefinitionList definition);

@ffi.Native<ffi.Pointer<ffi.Char> Function(
  SlintSkiaDefinitionList,
  ffi.UintPtr,
)>()
external ffi.Pointer<ffi.Char> slint_skia_definitions_name(
  SlintSkiaDefinitionList definition,
  int index,
);

@ffi.Native<ffi.Void Function(SlintSkiaDefinitionList)>()
external void slint_skia_definitions_free(SlintSkiaDefinitionList definition);

@ffi.Native<SlintSkiaInstance Function(SlintSkiaDefinitionList)>()
external SlintSkiaInstance slint_skia_instantiate(
  SlintSkiaDefinitionList definition,
);

@ffi.Native<ffi.Void Function(SlintSkiaInstance)>()
external void slint_skia_instance_free(SlintSkiaInstance instance);

@ffi.Native<ffi.Bool Function(SlintSkiaInstance, ffi.Float, ffi.Float)>()
external bool slint_skia_instance_set_size(
  SlintSkiaInstance instance,
  double width,
  double height,
);

@ffi.Native<ffi.Bool Function(SlintSkiaInstance)>()
external bool slint_skia_instance_render(SlintSkiaInstance instance);

@ffi.Native<ffi.Int64 Function(SlintSkiaInstance)>()
external int slint_skia_instance_texture_id(SlintSkiaInstance instance);

@ffi.Native<ffi.Bool Function(
  SlintSkiaInstance,
  ffi.Uint8,
  ffi.Float,
  ffi.Float,
  ffi.Uint8,
  ffi.Float,
  ffi.Float,
)>()
external bool slint_skia_instance_pointer_event(
  SlintSkiaInstance instance,
  int kind,
  double x,
  double y,
  int button,
  double dx,
  double dy,
);

@ffi.Native<ffi.Bool Function(
  SlintSkiaInstance,
  ffi.Pointer<ffi.Char>,
  ffi.Bool,
)>()
external bool slint_skia_instance_key_event(
  SlintSkiaInstance instance,
  ffi.Pointer<ffi.Char> text,
  bool pressed,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(
  SlintSkiaInstance,
  ffi.Pointer<ffi.Char>,
)>()
external ffi.Pointer<ffi.Char> slint_skia_instance_get_property(
  SlintSkiaInstance instance,
  ffi.Pointer<ffi.Char> name,
);

@ffi.Native<ffi.Bool Function(
  SlintSkiaInstance,
  ffi.Pointer<ffi.Char>,
  ffi.Pointer<ffi.Char>,
)>()
external bool slint_skia_instance_set_property(
  SlintSkiaInstance instance,
  ffi.Pointer<ffi.Char> name,
  ffi.Pointer<ffi.Char> valueJson,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(
  SlintSkiaInstance,
  ffi.Pointer<ffi.Char>,
  ffi.Pointer<ffi.Char>,
)>()
external ffi.Pointer<ffi.Char> slint_skia_instance_invoke(
  SlintSkiaInstance instance,
  ffi.Pointer<ffi.Char> name,
  ffi.Pointer<ffi.Char> argsJson,
);

typedef SlintSkiaDefinitionList = ffi.Pointer<ffi.Void>;
typedef SlintSkiaEngine = ffi.Pointer<ffi.Void>;
typedef SlintSkiaInstance = ffi.Pointer<ffi.Void>;
